--- a/index.html
+++ b/index.html
@@ -6,25 +6,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>
+    <section>
+        <div class="half-width">
+            <h1>
+                Stay Focused On
+            </h1>
+            <h1><span class="change-color"> Mission 2022 </span></h1>
+            <p>
+            <h3>“The key to success is to focus our conscious mind on things we desire, not the things we fear.”- Brian
+                Tracy
+            </h3>
 
-        Stay Focused on <span class="change-color"> Mission 2022 </span>
-
-    </h1>
-    <p>
-    <h3>“The key to success is to focus our conscious mind on things we desire, not the things we fear.”- Brian Tracy
-    </h3>
-
-    The precise truth is that our focus drives everything in our lives.
-    It almost solely determines if we’ll experience a high quality of life and accomplish things that are meaningful
-    to us.
-    But then key question comes How to stay focused in this most overwhelming information age. How to stay focused,
-    when our list of goals and dreams is endless to achieve and more is being added to it on daily basis.
-    </p>
+            The precise truth is that our focus drives everything in our lives.
+            It almost solely determines if we’ll experience a high quality of life and accomplish things that are
+            meaningful
+            to us.
+            But then key question comes How to stay focused in this most overwhelming information age. How to stay
+            focused,
+            when our list of goals and dreams is endless to achieve and more is being added to it on daily basis.
+            </p>
+            <a class="explore" target="_blank" href="https://www.google.com">Explore Now</a>
+            <h5>Scroll Down To Explore More About Us! </h5>
+        </div>
+        <div class="half-width">
+            <img src=" images/person/person-0.png" alt="">
+        </div>
+    </section>
+    <div class="text-align">
+        <h1>My Mission in <span class="change-color">2022</span></h1>
+    </div>
 </body>
 
 </html>
