--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 <body>
     <section class="flexible-container">
         <div class="half-width">
-            <h1>
-                Stay Focused On <br> <span class="change-color"> Mission 2022 </span>
-            </h1>
+            <div class="heading">
+                <h1>
+                    Stay Focused On <br> <span class="change-color"> Mission 2022 </span>
+                </h1>
+            </div>
             <h3>“The key to success is to focus our conscious mind on things we desire, not the things we fear.”- Brian
                 Tracy
             </h3>
@@ -70,6 +72,47 @@
                 know the nuances of Web design and delivery and the various tools and software applications you can
                 use.
             </p>
+        </div>
+    </section>
+    <section class="flexible-container" id="middle-banner">
+        <div class="half-width">
+            <img src="images/pictures/coding.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Develop <br> Without Limits</h1>
+            <p>Development Without Limits helps organizations large and small, private and public, lead the future of
+                our children’s education.
+
+                From working with the state of Indiana to develop an online quality self-assessment tool to working with
+                the City of Los Angeles and LA’s BEST on curriculum that meets the needs of inner city kids. From
+                helping TechBridge Girls deepen their commitment to equity to working with the National AfterSchool
+                Association & Google to develop the first afterschool digital toolkit.
+
+                We help our clients expand their vision, become leaders on their quest, and continue to bring new
+                opportunities to our education community.
+
+                We believe that if the rising tide lifts all ships, we can be the tide.</p>
+            <a class="explore" target="_blank" href="https://www.google.com">Read the Documentation</a>
+        </div>
+    </section>
+    <section class="flexible-container" id="bottom-banner">
+        <div class="half-width">
+            <h1>
+                Know our <br> Global Community
+            </h1>
+            <p>
+                Global Communities works at the intersection of humanitarian assistance, sustainable development and
+                financial inclusion to save lives, advance equity and secure strong futures.
+                For more than six decades, we have stood with communities at the forefront of their own development,
+                offering learnings and insights from work around the world to help shape customized, local solutions to
+                complex challenges. From urgent responses in the wake of conflict and crises to strengthening resilience
+                for the long term and expanding access to credit to those historically excluded, we center marginalized
+                voices as they make meaningful and measurable change.
+            </p>
+            <a class="explore" target="_blank" href="https://www.google.com">Read the Documentation</a>
+        </div>
+        <div class="half-width">
+            <img src="images/pictures/project.png" alt="">
         </div>
     </section>
 </body>
