--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="flexible-container">
         <div class="half-width">
             <h1>
                 Stay Focused On
@@ -40,8 +40,37 @@
         </div>
     </section>
     <div class="text-align">
-        <h1>My Mission in <span class="change-color">2022</span></h1>
+        <h1> My Mission in <span class="change-color">2022</span></h1>
     </div>
+    <section class="flexible-container">
+        <div class="half-width">
+            <h2>Mission</h2>
+            <p>
+                A mission statement is a short statement of why an organization exists, what its overall goal is,
+                identifying the goal of its operations: what kind of product or service it provides, its primary
+                customers or market, and its geographical region of operation.[1][2] It may include a short
+                statement of such fundamental matters as the organization's values or philosophies, a business's
+                main competitive advantages, or a desired future state—the "vision".[1][3]
+            </p>
+        </div>
+        <div class="half-width">
+            <h2>Vission</h2>
+            <p>
+                Our vision is to be the largest global mobile/web development company. Focused on constant
+                innovation as our key for achieving the ultimate goal of success and emerge as globally recognized
+                company by providing the superior quality services and solutions.
+            </p>
+        </div>
+        <div class="half-width">
+            <h2>Goals</h2>
+            <p>
+                As a Web developer, you want to be able to design Web pages that can effectively display material,
+                provide interactivity, and be artistically pleasing to the user. In order to do this, you need to
+                know the nuances of Web design and delivery and the various tools and software applications you can
+                use.
+            </p>
+        </div>
+    </section>
 </body>
 
 </html>
