--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
             <img src="images/pictures/project.png" alt="">
         </div>
     </section>
+    <div class="text-align">
+        <h1> <span class="change-color">DocTime</span>,Online Medical Service Provider</h1>
+    </div>
+    <section class="flexible-container" id="bottom-section">
+        <div class="half-width">
+            <img src="images/pictures/mobile1.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1><span class="change-color">Instant video consultation</span>
+                from the best Doctors</h1>
+            <p>
+                DocTime is an online medical service app where patients can get 24/7 video consultation from doctors.
+                DocTime uses 256 bit encryption to secure the video consultation. Patient can keep their previous
+                consultation history and view online prescriptions.
+
+                Doctor can join the platform using our simple on boarding process. We verify every doctor to make sure
+                only BMDC authorised doctors are providing consultation using latest technologies.
+            </p>
+            <a class="explore" target="_blank" href="https://www.doctime.com.bd/">Learn More..</a>
+        </div>
+    </section>
+    <footer>
+        <div class="footer">
+            <h3>Mission <span class="change-color">2022</span></h3>
+            <p>
+                Hard work, Perseverance, and Determination for 2022!
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
