--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
         <h1> My Mission in <span class="change-color">2022</span></h1>
     </div>
     <section class="flexible-container">
-        <div class="half-width">
-            <h2>Mission</h2>
+        <div class="shadow">
+            <img class="half-width" src="images/illustrators/illustrator-1.png" alt="">
+            <h3>Mission</h3>
             <p>
                 A mission statement is a short statement of why an organization exists, what its overall goal is,
                 identifying the goal of its operations: what kind of product or service it provides, its primary
@@ -53,16 +54,18 @@
                 main competitive advantages, or a desired future state—the "vision".[1][3]
             </p>
         </div>
-        <div class="half-width">
-            <h2>Vission</h2>
+        <div class="shadow">
+            <img class="half-width" src="images/illustrators/illustrator-2.png" alt="">
+            <h3>Vission</h3>
             <p>
                 Our vision is to be the largest global mobile/web development company. Focused on constant
                 innovation as our key for achieving the ultimate goal of success and emerge as globally recognized
                 company by providing the superior quality services and solutions.
             </p>
         </div>
-        <div class="half-width">
-            <h2>Goals</h2>
+        <div class="shadow">
+            <img class="half-width" src="images/illustrators/illustrator-3.png" alt="">
+            <h3>Goals</h3>
             <p>
                 As a Web developer, you want to be able to design Web pages that can effectively display material,
                 provide interactivity, and be artistically pleasing to the user. In order to do this, you need to
