--- a/index.html
+++ b/index.html
@@ -16,21 +16,19 @@
     <section class="flexible-container">
         <div class="half-width">
             <h1>
-                Stay Focused On
+                Stay Focused On <br> <span class="change-color"> Mission 2022 </span>
             </h1>
-            <h1><span class="change-color"> Mission 2022 </span></h1>
-            <p>
             <h3>“The key to success is to focus our conscious mind on things we desire, not the things we fear.”- Brian
                 Tracy
             </h3>
-
-            The precise truth is that our focus drives everything in our lives.
-            It almost solely determines if we’ll experience a high quality of life and accomplish things that are
-            meaningful
-            to us.
-            But then key question comes How to stay focused in this most overwhelming information age. How to stay
-            focused,
-            when our list of goals and dreams is endless to achieve and more is being added to it on daily basis.
+            <p>
+                The precise truth is that our focus drives everything in our lives.
+                It almost solely determines if we’ll experience a high quality of life and accomplish things that are
+                meaningful
+                to us.
+                But then key question comes How to stay focused in this most overwhelming information age. How to stay
+                focused,
+                when our list of goals and dreams is endless to achieve and more is being added to it on daily basis.
             </p>
             <a class="explore" target="_blank" href="https://www.google.com">Explore Now</a>
             <h5>Scroll Down To Explore More About Us! </h5>
